--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,106 @@
 .wrapper {
-	max-width: 750px;
+	max-width: 850px;
 	margin: 0 auto;
 	border: 1px solid #000;
 	border-radius: 15px;
 	padding: 15px;
 }
 
-.wrapper > .css-1fyyp8j-MuiGrid-root {
-	max-width: 100%;
+.header {
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+}
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+caption {
+	font-size: 25px;
+	font-weight: bold;
+	margin-bottom: 15px;
+}
+
+thead th {
+	text-align: left;
+	border-bottom: 2px solid black;
+}
+
+.name {
+	display: flex;
+	align-items: center;
+}
+
+.name > div {
+	margin-right: 10px;
+}
+
+thead button {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: #fff;
+	border: 0;
+	border-radius: none;
+	font-family: inherit;
+	font-weight: 700;
+	font-size: inherit;
+	padding: 0.5em;
+	margin-bottom: 1px;
+}
+
+thead button .anticon svg {
+	margin-left: 10px;
+}
+
+thead button.ascending::after {
+	display: inline-block;
+	margin-left: 1em;
+}
+
+thead button.descending::after {
+	display: inline-block;
+	margin-left: 1em;
+}
+
+tbody td {
+	padding: 0.5em;
+}
+
+tbody tr {
+	border-bottom: 1px solid #ccc;
+	transition: all 0.15s ease-in-out;
+}
+
+tbody tr:hover {
+	transform: translateY(-5px);
+	background-color: #eee;
+}
+
+.cancelledTd {
+	font-weight: bold;
+	color: red;
+}
+
+.modal_button {
+	text-align: center;
+	margin-top: 15px;
+	max-width: max-content;
+	border: 2px solid rgba(87, 186, 243, 1);
+	border-radius: 15px;
+	background-color: rgba(87, 186, 243, 0.24);
+	color: #fff;
+	transition: all 0.15s ease-in-out;
+}
+
+.modal_button:hover {
+	transform: translateY(-1px);
+	box-shadow: 0px 2px 8px rgb(1, 47, 73);
+	background-color: rgba(87, 186, 243, 0.5);
+}
+
+.collection-create-form_last-form-item {
+	margin-bottom: 0;
 }
