--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,14 +13,8 @@
 }
 
 table {
-	width: 100%;
+	/* width: 100%; */
 	border-collapse: collapse;
-}
-
-caption {
-	font-size: 25px;
-	font-weight: bold;
-	margin-bottom: 15px;
 }
 
 thead th {
@@ -84,6 +78,10 @@ tbody tr:hover {
 	color: red;
 }
 
+td > strong {
+	display: none;
+}
+
 .modal_button {
 	text-align: center;
 	margin-top: 15px;
@@ -106,20 +104,25 @@ tbody tr:hover {
 }
 
 .timeDiff {
-	font-weight: bolder;
-	background-color: rgb(248, 233, 233);
+	font-style: italic;
+	background-color: #8ee3fd73;
+}
+.time-diff-row {
+	display: none;
 }
 
 [data-tooltip] {
 	position: relative;
 }
 [data-tooltip]::after {
+	text-align: center;
+	border-radius: 15px;
 	content: attr(data-tooltip);
 	position: absolute;
-	width: 300px;
+	width: 200px;
 	left: 0;
 	top: 0;
-	background: #3989c9;
+	background: #6fd7f7;
 	color: #fff;
 	padding: 0.5em;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
